
NEW FEATURES:
* Renamed cl_showpos to cl_showinfo:
	* Viewangles (both refdef and client) 
	* Number of entities being rendered
	* Number of dynamic lights being rendered
	* Number of particles bing rendered
* Added option to switch between borderless and dedicated fullscreen to settings
* Added lighting to z_tdm_warehouse 
* Texture fixes in z_tdm_subway

OTHER ENHANCEMENTS:
* Moved mouse code from platform specific to platform independent code (because now it is). All input code is now platform independent!
* Renamed in_ cvars to input_ and same for functions
* Made input shift code slightly less insane
* Removed almost all relative path includes (one of them is required due to being compiled from two projects...)
* Scale FOV with aspect ratio - CURRENTLY THIS FUCKS CULLING!
* Reduced s_mixahead value from 0.2 to 0.1 to reduce sound lag 
* UI: Renamed UI_SetActive to UI_SetActivated
	* Renamed the concept of UI "active" to UI activation so that it makes sense
* UI: Allowed Image controls to optionally display a different image when the mouse is clicking on them (ui_control_t->image_path_on_click), set with the UI_SetImageOnClick function
* UI: Allowed Image controls to optionally display a different image when the mouse is hovering over them (ui_control_t->image_path_on_hover), set with the UI_SetImageOnHover function
	* Added hover images for team select menu

REMOVALS:
* Removed v_centerspeed cvar (was already dead)
* Removed v_centermove cvar (was already dead)
* Removed viewpos command (cl_showinfo 1 far superior and duplicates functionality)
* Removed joystick support (code sucks, only obsolete joysticks supported, DirectInput only, non-portable, not even supported on Linux it seems?)
	* Removed joy_name cvar
	* Removed joy_advanced cvar
	* Removed joy_advaxisx cvar
	* Removed joy_advaxisy cvar
	* Removed joy_advaxisz cvar
	* Removed joy_advaxisr cvar
	* Removed joy_advaxisu cvar
	* Removed joy_advaxisv cvar
	* Removed joy_forwardthreshold cvar