@@ -31,6 +31,8 @@ NEW FEATURES:
 * Added option to switch between borderless and dedicated fullscreen to settings
 * Added lighting to z_tdm_warehouse 
 * Texture fixes in z_tdm_subway
+* Renderer API version 8:
+	* Added SetMouseScrollProc
 
 OTHER ENHANCEMENTS:
 * Moved mouse code from platform specific to platform independent code (because now it is). All input code is now platform independent!
